--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@ crossorigin="anonymous"></script>
 
                 <div class="col-md-4 col-sm-6 col-12">
                     <div class="blog-grid-simple  bg-blog1">
-                        <img src="/assets/img/project/bg-home.png" alt="OpenBosniana Home KDE 092024">
+                        <img src="/assets/img/project/default.jpg" alt="OpenBosniana Home KDE 092024">
                         <h4>OpenBosniana Home KDE 092024 release note</h4>
                         <div class="blog-grid-simple-linija"></div>
                         <p>The latest version of the Home KDE amd64 series.</p>
