--- a/index.html
+++ b/index.html
@@ -209,6 +209,9 @@ crossorigin="anonymous"></script>
                                             <img src="/assets/img/home/desktop.png" alt class="img-fluid">
                                         </div>
                                         <div class="ms-hero-img-slider carousel-item">
+                                            <img src="/assets/img/home/11.png" alt class="img-fluid">
+                                        </div>
+                                        <div class="ms-hero-img-slider carousel-item">
                                             <img src="/assets/img/home/office.png" alt class="img-fluid">
                                         </div>
                                         <div class="ms-hero-img-slider carousel-item">
