--- a/project/education/index.html
+++ b/project/education/index.html
@@ -78,7 +78,7 @@
         @media screen and (max-width: 767px) {
             .position-sticky {display:none}
             .about-menu {display:none}
-            .mobile-nav-n{display:flex;padding:5px 0 5px 0; } }
+            .mobile-nav-n{display:flex;margin-left:-15px } }
 
 
     </style>
@@ -238,8 +238,7 @@ crossorigin="anonymous"></script>
             </div>
           </div>
           <div class="mobile-nav-n">
-            <div class="container">
-              <header class="d-flex justify-content-center py-3">
+              <header class="py-2">
                 <ul class="nav abouttext-men">
     
                   <li class="nav-item">
@@ -273,10 +272,8 @@ crossorigin="anonymous"></script>
                   <li class="nav-item">
                     <a href="/project/faq" class="nav-link ">FAQ</a>
                   </li>
-    
                 </ul>
               </header>
-            </div>
           </div>
 
         </div>
