--- a/bs/project/documentation/index.html
+++ b/bs/project/documentation/index.html
@@ -78,7 +78,7 @@
         @media screen and (max-width: 767px) {
             .position-sticky {display:none}
             .about-menu {display:none}
-            .mobile-nav-n{display:flex;padding:5px 0 5px 0; } }
+            .mobile-nav-n{display:flex;margin-left:-15px } }
 
 
     </style>
