--- a/bs/project/faq/index.html
+++ b/bs/project/faq/index.html
@@ -238,10 +238,9 @@ crossorigin="anonymous"></script>
             </div>
           </div>
           <div class="mobile-nav-n">
-            <div class="container">
-              <header class="d-flex justify-content-center py-3">
+              <header class="py-2">
                 <ul class="nav abouttext-men">
-    
+
                   <li class="nav-item">
                     <a href="/bs/project/" class="nav-link ">Home</a>
                   </li>
@@ -276,7 +275,6 @@ crossorigin="anonymous"></script>
     
                 </ul>
               </header>
-            </div>
           </div>
 
         </div>
