--- a/gallery/2/index.html
+++ b/gallery/2/index.html
@@ -392,7 +392,7 @@ crossorigin="anonymous"></script>
       <p class="text-center"> | &copy; 2022-2024 | openbosniana os | bosniana.org | </p>
     </div>
   </div>
-</footer>
+</footer><button id="backToTopDugme" title="Go to top">↑</button>
 
 <script>
   window.onscroll = function() {
@@ -425,7 +425,7 @@ crossorigin="anonymous"></script>
         overlay.style.display = "none";
       }
     </script>
-    <script src="/assets/js/plugins.min.js"></script>
+    <script src="/assets/js/plugins.min.js"></script><script src="/assets/js/backtotop.js"></script>
 <script>
 function slidebar() {
     var t = $(".ms-slidebar"),
