--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@ crossorigin="anonymous"></script>
         </div>
       </section>
     </div>
-    <br>
+<br>
 <div class="container-fluid">
       <section class="bg-light">           
 
@@ -418,11 +418,12 @@ crossorigin="anonymous"></script>
 <script>(function () {var sc=document.createElement('script');sc.async=true;sc.src='https://b.sf-syn.com/badge_js?sf_id=3875863';var p=document.getElementsByTagName('script')[0];p.parentNode.insertBefore(sc, p);})();
 </script></div>
 <!-- End  Tag -->
-<br></div>
-<h4>
+<br></div><br>
+<div class="container">
+<p>
  <span class="text-white bg-danger p-1">Downloads from SourceForge mirror </span>
-  <span id="sf-downloads" class="bg-dark p-1 text-white">  </span>
-</h4>
+  <b><span id="sf-downloads" class="bg-dark p-1 text-white">     </span></b>
+</p>
 
 <script>
   const today = new Date().toISOString().split('T')[0];
@@ -445,7 +446,7 @@ crossorigin="anonymous"></script>
       document.getElementById('sf-downloads').textContent = 'Error';
     });
 </script>
- <h4 class="nunito-dark pb-2">For download statistics we use SourceForge official <a href="https://sourceforge.net/p/forge/documentation/Download%20Stats%20API/">Download Stats API</a></h4>
+ <p class="nunito-dark pb-2">For download statistics we use SourceForge official <a href="https://sourceforge.net/p/forge/documentation/Download%20Stats%20API/">Download Stats API</a></p></div>
       </section>
 </div>
 <div class="container-fluid">
